# magicmatch

./: CLAUDE.md  README.md  pyproject.toml
docs/: requirements.md
src/magicmatch/: cli.py  detector.py  signatures.py
src/magicmatch.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_cli.py  test_detector.py  test_signatures.py
